# spray-paint

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: huffman.cpp  huffman.h
src/heap/: heap.h  max_heap.h  min_heap.h
tests/: sp_test.cpp  test_two.txt
